--- a/src/styles/components/_detective-form.scss
+++ b/src/styles/components/_detective-form.scss
@@ -13,4 +13,31 @@
     .form__control .form__control-input {
         width: 75%;
     }
+
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-direction: column;
+
+        .form__control .form__control-input {
+            width: 100%;
+        }
+
+        .detective-form__control-label,
+        .form__control--files {
+        }
+
+        .form__control--email,
+        .form__control--checkbox,
+        .form__submit {
+        }
+
+        .form__submit {
+            margin-top: 1rem;
+
+            .button {
+                padding-left: 3.6563rem;
+                padding-right: 3.6563rem;
+            }
+        }
+    }
 }
