--- a/src/styles/components/_accordions.scss
+++ b/src/styles/components/_accordions.scss
@@ -21,6 +21,7 @@
       font-size: 1.125rem;
       line-height: 1.375rem;    
       text-transform: uppercase;
+      margin-bottom: 1rem;
     }
 
     h4{
@@ -30,6 +31,7 @@
       font-size: 1.125rem;
       line-height: 1.5625rem;
       color: $color-carbon;
+      margin-bottom: 1rem
     }
 
     .item, .sub-item{
@@ -63,6 +65,7 @@
       font-weight: 400;
       font-size: 1rem;
       line-height: 1.375rem;
+      margin-bottom: 1rem
     }
 
     p:not(:last-of-type) {
@@ -77,10 +80,12 @@
       line-height: 1.5625rem;
       text-decoration-line: underline;
       color: $color-red;
+      margin-bottom: 1rem
     }
 
     .acc-table{
       display: flex;
+      margin-bottom: 1rem
 
       p{
         border-top: 1px solid $color-black;
@@ -153,6 +158,7 @@
       font-weight: 400;
       font-size: .875rem;
       line-height: 1.3125rem;
+      margin-bottom: 1rem
     }
   }
 
