--- a/src/styles/components/_accordions.scss
+++ b/src/styles/components/_accordions.scss
@@ -85,7 +85,7 @@
 
     .acc-table{
       display: flex;
-      margin-bottom: 1rem
+      margin-bottom: 1rem;
 
       p{
         border-top: 1px solid $color-black;
