upload and tak photo buttons created

--- a/src/pages/design.astro
+++ b/src/pages/design.astro
@@ -211,6 +211,8 @@ import "../styles/settings/_design.scss";
           <!-- Default button -->
           <button class="button"> Button Primary / Default</button>
           <button class="button button--secondary"> Button Secondary</button>
+          <button class="button button--take-photo"> Button take-photo</button>
+          <button class="button button--upload-photo"> Button upload-photo</button>
           <button class="button button--tertiary"> Tertiary Button</button>
         </div>
       </div>
