design bg fixed

--- a/src/styles/settings/_design.scss
+++ b/src/styles/settings/_design.scss
@@ -156,3 +156,11 @@ main {
   font-size: 0.75em;
   font-weight: 500;
 }
+
+.design{
+  background-color: snow;
+main{
+  background: none;
+    background-color: snow;
+}
+}
