--- a/src/styles/settings/_design.scss
+++ b/src/styles/settings/_design.scss
@@ -158,9 +158,7 @@ main {
 }
 
 .design{
-  background-color: snow;
 main{
-  background: none;
-    background-color: snow;
+  background: unset;
 }
 }
