--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -2,8 +2,8 @@
   position: relative;
   background-image: url('/assets/images/header-bg-mobile.png');
   background-repeat: no-repeat;
-  // background-position: center;
   background-size: cover;
+  @include transition('all', 0.3s, ease-in-out);
 
   @media screen and (min-width: 1100px) {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -14,7 +14,6 @@
       max-width: 85.3125rem;
     }
   }
-
 
   &::before {
     content: '';
@@ -49,6 +48,15 @@
       margin: auto;
       width: 1440px;
     }
+
+  }
+
+  &.is--sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 10;
 
   }
 
