Update ALPD Academy Nav Menu Item Link

--- a/src/components/Navigation/HeaderPrimaryNavigation.astro
+++ b/src/components/Navigation/HeaderPrimaryNavigation.astro
@@ -5,7 +5,7 @@
         <a href="/" class="nav__menu_item_link">Home</a>
       </li>
       <li class="nav__menu_item">
-        <a href="#" class="nav__menu_item_link">ALP Academy</a>
+        <a href="/alpd-academy" class="nav__menu_item_link">ALP Academy</a>
       </li>
       <li class="nav__menu_item">
         <a href="#" class="nav__menu_item_link">HPP Profile</a>
