fixes requested made

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -5,14 +5,14 @@ import Layout from "../layouts/Layout.astro";
 <Layout title="Page not found" pageClass="page__not_found">
   
   <div class="reference">
-    <img src="/assets/images/freeze.png" class="page__not_found__title">
+    <img src="/assets/images/freeze-title.png" class="page__not_found__title">
     <div class="page__not_found__text">
       <p>All units be advised… it seems like someone’s been tampering with our network.</p>
       
       <p>The site will be back once we catch the culprit!</p>
-    </div>
-    <a href="/index" class="button">Return to Headquarters</a>
-    <img src="/assets/images/error-frame.svg" alt="" class="page__not_found__image">
+    </div>  
+    <a href="/" class="button">Return to Headquarters</a>
+    <img src="/assets/images/error-frame.png" alt="" class="page__not_found__image">
     <div class="red-string"></div>
   </div>
 </Layout>
