✨ Add last styles and form validations

--- a/src/components/ALPDVideo.astro
+++ b/src/components/ALPDVideo.astro
@@ -31,6 +31,7 @@ import DetectiveForm from './DetectiveForm.astro';
             </div>
             <div class="alpd-form__container">
                 <div class="wrapper">
+                    <img class="alpd-form__paperclip" src="/assets/images/alpd-video/paperclip-desktop.png" alt="">
                     <div class="alpd-form__container-header">
                         <button class="alpd-form__close">x</button>
                         <h2 class="alpd-form__title">
