--- a/src/components/DetectiveForm.astro
+++ b/src/components/DetectiveForm.astro
@@ -1,4 +1,4 @@
-<form class="detective-form">
+<form class="detective-form" novalidate>
     <p class="detective-form__control-label">
         What should we call you, Detective?
     </p>
@@ -20,6 +20,8 @@
             required
             aria-required="true"
             pattern="^[a-zA-Z.'\\- ]{1,50}$"
+            onblur="validateFormControl(event)"
+            onchange="validateFormControl(event)"
         />
         <p class="form__control-error">Please enter first name</p>
     </div>
@@ -39,6 +41,8 @@
             required
             aria-required="true"
             pattern="^[a-zA-Z.'\\- ]{1,50}$"
+            onblur="validateFormControl(event)"
+            onchange="validateFormControl(event)"
         />
         <p class="form__control-error">Please enter last name</p>
     </div>
@@ -104,6 +108,8 @@
                 name="terms"
                 required
                 aria-required="true"
+                onblur="validateFormControl(event)"
+                onchange="validateFormControl(event)"
             />
             <label class="form__control-label" for="terms-and-conditions">
                 I agree to the <a href="" target="_blank">Terms & Conditions</a> and <a href="" target="_blank">Privacy Notice</a>.
@@ -125,6 +131,8 @@
                 name="sign-me-up"
                 required
                 aria-required="true"
+                onblur="validateFormControl(event)"
+                onchange="validateFormControl(event)"
             />
             <label class="form__control-label" for="sign-me-up">
                 Sign me up for additional information about Alexion's products, services, programs, market research, or other topics of interest that Alexion thinks may interest me.
@@ -134,6 +142,7 @@
     </div>
 
     <div class="form__submit">
-        <input class="button" type="submit" value="Play Video" />
+        <input class="button" type="submit" value="Play Video" onclick="validateFormOnSubmit(event)" />
     </div>
 </form>
+<script is:inline src="/assets/js/forms.js"></script>
