--- a/src/styles/components/_alpd-video.scss
+++ b/src/styles/components/_alpd-video.scss
@@ -189,6 +189,10 @@
                     @media screen and (min-width: 768px) {
                         font-size: 2.625rem;
                     }
+
+                    @media screen and (min-width: 1440px) {
+                        right: -75px;
+                    }
                 }
 
                 .alpd-form__title {
@@ -203,12 +207,12 @@
                     }
 
                     * {
-                        font-family: "veneer",sans-serif;
+                        font-family: "veneer", sans-serif;
                     }
                 }
 
                 .alpd-form__subtitle {
-                    font-family: "oswald",sans-serif;
+                    font-family: "oswald", sans-serif;
                     font-weight: 700;
                     font-size: 1.3125rem;
                     line-height: 26.25px;
@@ -245,12 +249,28 @@
         }
 
         .alpd-video__wrapper {
-            height: calc(660px + ((800 - 660) * ((100vw - 768px) / (1440 - 768))));
+            height: 50.8125rem;
+
+            @media screen and (min-width: 768px) {
+                height: calc(638px + ((815 - 638) * ((100vw - 768px) / (1440 - 768))));
+            }
         }
 
         .alpd-video__container .alpd-form__container {
             display: block;
             height: 50.75rem;
+
+            .alpd-form__paperclip {
+                display: none;
+            }
+
+            .wrapper {
+                position: initial;
+
+                @media screen and (min-width: 1440px) {
+                    max-width: calc(100% - 15.25rem);
+                }
+            }
 
             @media screen and (min-width: 768px) {
                 position: absolute;
@@ -264,6 +284,51 @@
                 top: 50%;
                 bottom: auto;
                 transform: translate(-50%, -50%);
+
+                &::before,
+                &::after {
+                    content: "";
+                    position: absolute;
+                    background: $color-black;
+                }
+
+                &::before {
+                    width: 100%;
+                    height: 1px;
+
+                    left: 0;
+                    top: 115px;
+                }
+
+                &::after {
+                    width: 1px;
+                    height: 100%;
+
+                    top: 0;
+                    right: 155px;
+                }
+
+                .alpd-form__paperclip {
+                    display: block;
+                    position: absolute;
+                    left: -9px;
+                    top: -22px;
+                    width: 3.125rem;
+                    z-index: 2;
+                }
+            }
+
+            @media screen and (min-width: 1024px) {
+                &::after {
+                    right: 200px;
+                }
+            }
+
+            @media screen and (min-width: 1440px) {
+                .alpd-form__paperclip {
+                    top: -45px;
+                    left: 25px;
+                }
             }
         }
     }
