--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -39,16 +39,16 @@
     text-align: center;
     
     &__title{
-        width: 7.1875rem;
+        width: 9rem;
         margin: auto;
         margin-top: 9.2363rem;
         position: relative;
         z-index: 2;
         
-        @media screen and (min-width:700px) {
+        /* @media screen and (min-width:700px) {
             width: 11.1875rem;
             margin-top: 14.5006rem;
-        }
+        } */
         
     }
     &__text{
