--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -106,7 +106,8 @@
         }
         @media screen and (min-width:800px) {
             max-width: 51.5356rem;
-            top: -23.3125rem;
+            /* top: -23.3125rem; */
+            top: -19.3125rem;
             left: -3.875rem;
         }
         @media screen and (min-width:1200px) {
