--- a/src/styles/components/_alpd-video.scss
+++ b/src/styles/components/_alpd-video.scss
@@ -130,6 +130,8 @@
                 top: 50%;
                 left: 50%;
 
+                cursor: pointer;
+
                 transform: translate(-50%, -50%);
 
                 width: 2.0625rem;
@@ -143,10 +145,36 @@
                 justify-content: center;
 
                 &::before {
-                    content: url("/assets/icons/play-white.svg");
+                    // content: url("/assets/icons/play-white.svg");
+                    // position: relative;
+                    // top: 1px;
+                    // left: 2px;
+                    content: '';
+                    background-image: url(/assets/icons/play-white.svg);
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                    background-position: center;
+                    position: relative;
+                    left: 2px;
+                    height: 0.75rem;
+                    width: 0.75rem;
+
+                    @media screen and (min-width: 768px) {
+                        left: 3px;
+                        height: 2rem;
+                        width: 2rem;
+                    }
+
+                    @media screen and (min-width: 1200px) {
+                        top: 1px;
+                        left: 4px;
+                        height: 2.25rem;
+                        width: 2.25rem;
+                    }
                 }
 
                 @media screen and (min-width: 768px) {
+                    border-width: 3px;
                     width: 4.875rem;
                     height: 4.875rem;
                 }
