--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -33,3 +33,23 @@
         margin-bottom: 2.5rem;
     }
 }
+
+// -------------------------- ALPD Academy page ---------------------------------------------------
+
+.alpd-academy__role-alkaline {
+    position: relative;
+    
+    .red-string {
+        position: absolute;
+    }
+
+    .alpd-academy__alkaline-manillafolder {
+
+    }
+
+    .alpd-academy__alkaline-content {
+
+    }
+}
+
+// -------------------------- ALPD Academy page ---------------------------------------------------
