--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -21,6 +21,7 @@
 @import './components/_footer-navigation.scss';
 @import './components/case-file';
 @import './components/alpd-video';
+@import './components/references';
 
 
 .section__home-video {
